working on image serving

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -4,5 +4,9 @@
         <title>Wotosuga - Home</title>
         <body>
             <h1 style="text-align: center;">Welcome to WO'TOSUGA</h1>
+            <button onclick="location.href='/predict';">Go to Predictions</button>
+            <!-- <form action="/predict">
+                <button>Go to Predictons</button>
+            </form> -->
         </body>
     </html>
