--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -4,8 +4,18 @@
         <title>Wo'tosuga - Results</title>
         <body>
             <h1>Results Page</h1>
-            <p>Here is your prediction</p>
-            <p>{{results}}</p>
+            <p>Dear <h2>{{name}},</h2> your results are here.</p>
+            <p>BMI: {{bmi}}</p>
+            <p><b>Risk Status: {{diagnosis}}</b></p>
+            <h3>Analytics</h3>
+            <img src="data:image/png;base64,{ diagnosis_plot }" alt="Diagnosis Plot">
+            <br>
+            <img src="data:image/png;base64,{ bmi_category_plot }", alt="BMI Category Plot">
+            <br>
+            <img src="data:image/png;base64,{ bmi_distribution_plot }", alt="BMI Distribution Plot">
+            <h3>Recommendations</h3>
+            <p>Lorem ipsum and stuff. Eat good food and exercise. More stories later.
+                Let's see if this thing works first.
+            </p>
         </body>
-
     </html>
