--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -34,16 +34,16 @@
                <div><button onclick="location.href='/predict':">Get your diabetes risk now</button></div> 
             {% endblock %}
             <footer>
+                <p class="disclaimer">This is only experimental!</p>
                 <nav class="footer-menu">
                     <ul>
                         <li><a href="/blog">Blog</a></li>
                         <li><a href="/predict">Predict</a></li>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/specialist">Specialists</a></li>
+                        <li><a href="/specialists">Specialists</a></li>
                         <li><a href="/profile">Profile</a></li>
                    </ul>
                 </nav>
-                <p class="disclaimer">This is only experimental!</p>
             </footer>
         </body>
     </html>
