--- a/frontend/templates/predictor.html
+++ b/frontend/templates/predictor.html
@@ -9,7 +9,7 @@
                 <input type="text" name="Name" id="name" placeholder="Enter name" value="Jane Doe">
                 <br>
                 <label for="age">Age</label>
-                <input type="number" name="Age" id="age" placeholder="Enter age" value="45">
+                <input type="number" step="1" name="Age" id="age" placeholder="Enter age" value="45">
                 <br>
                 <label for="Sex">Sex</label>
                 <label for="male">Male</label>
@@ -30,7 +30,7 @@
                 <input type="radio" name="HighChol" id="nohighchol" value="0">
                 <br>
                 <label for="height">Height(m)</label>
-                <input type="number" name="Height" id="height" value="2">
+                <input type="number" step=".01" name="Height" id="height" value="2">
                 <br>
                 <label for="weight">Weight(kg)</label>
                 <input type="number" name="Weight" id="weight" value="87">
