--- a/frontend/templates/specialists.html
+++ b/frontend/templates/specialists.html
@@ -1,5 +1,23 @@
 {% extends "home.html" %}
+
 {% block title %}Wo'tosuga - Specialists{% endblock %}
-{% block content %}
+
+{% block header_image %}{% endblock %}
+
+{% block page_header %}
 <h1 class="page-title">Specialists</h1>
+{% endblock %}
+
+{% block content %}
+<p>Find professionals specializing in a vast array of diabetes care duties, including:</p>
+<ul>
+    <li>Endocrinologists & Diabetologists</li>
+    <li>Podiatrists and Diabetic foot specialists</li>
+    <li>Physiotherapists</li>
+    <li>Nutritionists</li>
+    <li>Fitness trainers</li>
+    <li>Pyschiatrists</li>
+    <li>Psychologists</li>
+    <li>Counsellors</li>
+</ul>
 {% endblock %}
