--- a/frontend/templates/predictor.html
+++ b/frontend/templates/predictor.html
@@ -1,14 +1,10 @@
-{% extends "home.html"%}
-
-<link href= "../styles/form.css" rel="stylesheet" type="text/css">
-
+{% extends "home.html" %}
 {% block title %}Wo'tosuga - Predict{% endblock %}
 
-{% block header_image %}{% endblock %}
 {% block page_header %}
-<h1 class="page-title">Prediction</h1>
-
+<h1 class="page-header">Predict</h1>
 {% endblock %}
+
 
 {% block content %}
             <form method="post">
