--- a/frontend/templates/results.html
+++ b/frontend/templates/results.html
@@ -1,5 +1,10 @@
 {% extends "home.html" %}
 {% block title %}Wo'tosuga - Results{% endblock %}
+
+{% block page_header %}
+<h1 class="page-header">Results</h1>
+{% endblock %}
+
 {% block content %}
             <h1 class="page-title">Results</h1>
             <p>Dear <h2>{{name}},</h2> your results are here.</p>
