--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -1,5 +1,14 @@
 {% extends "home.html" %}
 {% block title %}Wo'tosuga - Profile{% endblock %}
+
+{% block page_header %}
+<h1 class="page-header">Profile</h1>
+{% endblock %}
+
 {% block content %}
-<h1 class="page-title">Profile</h1>
+<div class="coming-soon">
+    <p id="coming-text">Coming Soon</p>
+    <p id="expect">You'll be able to create a profile for proper tracking and management</p>
+    <button id="coming-button" onclick="location.href='/predict';">Check your Diabetes Risk Status</button>
+</div>
 {% endblock %}
