--- a/frontend/static/styles/form.css
+++ b/frontend/static/styles/form.css
@@ -1,19 +1,40 @@
+#padding {
+  padding-top: 150px;
+}
 form {
   width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
+  /* margin: 0 auto; */
+  /* padding-top: 120px; */
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 50px;
+  border: 2px solid #ccc;
+  font-size: 20px;
+  background-color: fff;
+}
+
+div.field {
+  padding-bottom: 30px;
 }
 
 label {
   font-size: 16px;
+  /* font-weight: bold; */
+  color: #333;
+}
+
+p label.field-label {
+  font-size: 15px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #2980b9;
   font-weight: bold;
 }
 
 input {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border-radius: 15px;;
+  border: 1px solid #888;
 }
 
 select {
