--- a/frontend/templates/dev.html
+++ b/frontend/templates/dev.html
@@ -2,12 +2,28 @@
 {% block title %}Wo'tosuga - Dev{% endblock %}
 
 {% block page_header %}
-<h1 class="page-header">Dev</h1>
+<div class="home-header">
+    <h1 class="page-header">Dev</h1>
+</div>
 {% endblock %}
 
 {% block content %}
-<div class="coming-soon">
-    <p id="coming-text">Coming Soon</p>
-    <button id="coming-button" onclick="location.href='/predict';">Check your Diabetes Risk Status</button>
+<div class="bio">
+    <p id="name">Ebenezer Maradesa</p>
+    <p id="about">
+        Data Scientist || Software Engineer || Health Tech || Genomics || Medic
+    </p>
+</div>
+<div class="links">
+    <p>Let's Meet</p>
+    <ul>
+        <li><a href="https://github.com/maradeben">GitHub - maradeben</a></li>
+        <li><a href="https://linkedin.com/in/ebenezer-maradesa">LinkedIn - EBENEZER MARADESA</a></li>
+        <li><a href="https://x.com/maradeben">X - @maradeben</a></li>
+        <li><a href="https://medium.com/@maradeben">Medium - @maradeben</a></li>
+    </ul>
+</div>
+<div class="project-link">
+    <a href="https://github.com/maradeben/wotosuga">Wotosuga GitHub</a>
 </div>
 {% endblock %}
