--- a/frontend/templates/specialists.html
+++ b/frontend/templates/specialists.html
@@ -2,7 +2,9 @@
 {% block title %}Wo'tosuga - Specialists{% endblock %}
 
 {% block page_header %}
-<h1 class="page-header">Specialists</h1>
+<div class="home-header">
+    <h1 class="page-header">Specialists</h1>
+</div>
 {% endblock %}
 
 {% block content %}
