--- a/frontend/static/styles/header.css
+++ b/frontend/static/styles/header.css
@@ -21,14 +21,18 @@ header #logo {
     float: left;
     position: left;
     height: 100%;
-    /* width: 100%%; */
+    border: none;
+    border-style: none;
 }
 
 header #dev {
     float: right;
     position: right;
     height: 100%;
-    /* width: 100%; */
+    border: none;
+    border-style: none;
+    font-size: 10px;
+    font-stretch: extra-condensed;
 }
 
 .header-menu {
@@ -39,10 +43,19 @@ header {
     clear: both;
 }
 
-.page-header {
-  color: #ffffff;
-  font-size: 30px;
-  font-weight: bold;
+.page-header{
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+    padding-bottom: 10px;
+    align-self: center;
+    background-color: #2980b9;
+    color: #ffffff;
+    /* color: #000; */
+    width: 100%;
+    text-align: center;
+    text-decoration: solid;
+    font-weight: bold;
 }
 
 header div.home-header{
@@ -59,25 +72,16 @@ header div.home-header{
     font-weight: bold;
 }
 
-header div.page-header{
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-    padding-bottom: 10px;
-    align-self: center;
-    background-color: #2980b9;
-    color: #ffffff;
-    width: 100%;
-    text-align: center;
-    text-decoration: solid;
-    font-weight: bold;
-}
 
 header div.home-header h1 {
     font: sofia-pro arial bold 80px;
     font-size: 60px;
     padding-left: 1.5%;
     padding-right: 1.5%;
+}
+
+header div.home-header h1.page-header{
+    font-size: 80px;
 }
 
 header div.home-header h3#tagline {
@@ -89,12 +93,13 @@ header div.home-header button {
     background-color: #fff;
     color: #558b2f;
     width: 50%;
+    height: 50px;
     font-size: 18px;
     font-weight: bold;
     border: 1px solid #5582bf;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
-    border-radius: 15px;
+    border-radius: 30px;
 }
 
 header div.home-header button:hover {
