--- a/frontend/static/styles/form.css
+++ b/frontend/static/styles/form.css
@@ -3,36 +3,38 @@
 }
 form {
   width: 500px;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   /* padding-top: 120px; */
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 50px;
   border: 2px solid #ccc;
   font-size: 20px;
-  background-color: fff;
+  background-color: #fff;
 }
 
 div.field {
   padding-bottom: 30px;
+  border-bottom-style:inset;
 }
 
 label {
-  font-size: 16px;
+  font-size: 18px;
   /* font-weight: bold; */
   color: #333;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 p label.field-label {
-  font-size: 15px;
+  font-size: 18px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: #2980b9;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 input {
   width: 100%;
-  padding: 10px;
+  padding: 20px;
   border-radius: 15px;;
   border: 1px solid #888;
 }
@@ -45,6 +47,9 @@ select {
 
 input[type="radio"] {
   margin-left: 10px;
+  /* padding-right: 1px; */
+  width: 150px;
+  outline-style:;
 }
 
 input[type="submit"] {
