--- a/frontend/templates/predictor.html
+++ b/frontend/templates/predictor.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <div id="padding"></div>
-<form method="post">
+<form method="post" required>
     <div class="field">
         <p><label class="field-label" for="name">Name</label></p>
         <input type="text" name="Name" id="name" placeholder="Enter name">
