--- a/frontend/static/styles/header.css
+++ b/frontend/static/styles/header.css
@@ -52,7 +52,7 @@ header {
     background-color: #2980b9;
     color: #ffffff;
     /* color: #000; */
-    width: 100%;
+    /*width: 100%;*/
     text-align: center;
     text-decoration: solid;
     font-weight: bold;
@@ -66,7 +66,7 @@ header div.home-header{
     align-self: center;
     background-color: #2980b9;
     color: #ffffff;
-    width: 100%;
+    /*width: 100%;*/
     text-align: center;
     text-decoration: solid;
     font-weight: bold;
