--- a/frontend/templates/predictor.html
+++ b/frontend/templates/predictor.html
@@ -14,95 +14,95 @@
 <form method="post" required>
     <div class="field">
         <p><label class="field-label" for="name">Name</label></p>
-        <input type="text" name="Name" id="name" placeholder="Enter name">
+        <input type="text" name="Name" id="name" placeholder="Enter name" required>
     </div>
     <div class="field">
-        <p><label class="field-label for="age">Age</label></p>
-        <input type="number" step="1" min="0" max="150" name="Age" id="age" placeholder="Enter age">
+        <p><label class="field-label" for="age">Age</label></p>
+        <input type="number" step="1" min="0" max="150" name="Age" id="age" placeholder="Enter age" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="Sex">Sex</label></p>
         <label for="male">Male</label>
-        <input type="radio" name="Sex" value="1" id="male">
+        <input type="radio" name="Sex" value="1" id="male" required>
         <label for="female">Female</label>
-        <input type="radio" name="Sex" value="0" id="female">
+        <input type="radio" name="Sex" value="0" id="female" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="HighBP">Do you have High Blood Pressure?</label></p>
         <label for="highbp">Yes</label>
-        <input type="radio" name="HighBP" id="highbp" value="1">
+        <input type="radio" name="HighBP" id="highbp" value="1" required>
         <label for="nohighbp">No</label>
-        <input type="radio" name="HighBP" id="nohighbp" value="0">
+        <input type="radio" name="HighBP" id="nohighbp" value="0" required>
     </div>
     <div class="field">
     <p><label class="field-label" for="HighChol">Do you have known High Cholesterol?</label></p>
         <label for="highchol">Yes</label>
-        <input type="radio" name="HighChol" id="highchol" value="1">
+        <input type="radio" name="HighChol" id="highchol" value="1" required>
         <label for="nohighchol">No</label>
-        <input type="radio" name="HighChol" id="nohighchol" value="0">
+        <input type="radio" name="HighChol" id="nohighchol" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="height">Height(m)</label></p>
-        <input type="number" step=".01" min="0.50" max="2.50" name="Height" id="height">
+        <input type="number" step=".01" min="0.50" max="2.50" name="Height" id="height" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="weight">Weight(kg)</label></p>
-        <input type="number" step=".1" min="30" max="200" name="Weight" id="weight">
+        <input type="number" step=".1" min="30" max="200" name="Weight" id="weight" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="sticks">Sticks/day of cigarettes</label></p>
-        <input type="number" step="1" min="0" name="SticksDay" id="sticks">
+        <input type="number" step="1" min="0" name="SticksDay" id="sticks" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="years">For how many years have you smoked?</label></p>
-        <input type="number" step="1" min="0" name="YearsSmoked" id="years">
+        <input type="number" step="1" min="0" name="YearsSmoked" id="years" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="Stroke">Ever had a stroke?</label></p>
         <label for="stroke">Yes</label>
-        <input type="radio" name="Stroke" id="stroke" value="1">
+        <input type="radio" name="Stroke" id="stroke" value="1" required>
         <label for="nostroke">No</label>
-        <input type="radio" name="Stroke" id="nostroke" value="0">
+        <input type="radio" name="Stroke" id="nostroke" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="HeartDiseaseorAttack">Ever had heart attack or other heart disease?</label></p>
         <label for="heartish">Yes</label>
-        <input type="radio" name="HeartDiseaseorAttack" id="heartish" value="1">
+        <input type="radio" name="HeartDiseaseorAttack" id="heartish" value="1" required>
         <label for="noheartish">No</label>
-        <input type="radio" name="HeartDiseaseorAttack" id="noheartish" value="0">
+        <input type="radio" name="HeartDiseaseorAttack" id="noheartish" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="PhysActivity">Physical activity in past 30 days apart from job?</label></p>
         <label for="activity">Yes</label>
-        <input type="radio" name="PhysActivity" id="activity" value="1">
+        <input type="radio" name="PhysActivity" id="activity" value="1" required>
         <label for="noactivity">No</label>
-        <input type="radio" name="PhysActivity" id="noactivity" value="0">
+        <input type="radio" name="PhysActivity" id="noactivity" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="Fruits">Do you eat fruits one or more times per day?</label></p>
         <label for="fruits">Yes</label>
-        <input type="radio" name="Fruits" id="fruits" value="1">
+        <input type="radio" name="Fruits" id="fruits" value="1" required>
         <label for="nofruits">No</label>
-        <input type="radio" name="Fruits" id="nofruits" value="0">
+        <input type="radio" name="Fruits" id="nofruits" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="Veggies">Do you consume vegetables one or more times per day?</label></p>
         <label for="veggies">Yes</label>
-        <input type="radio" name="Veggies" id="veggies" value="1">
+        <input type="radio" name="Veggies" id="veggies" value="1" required>
         <label for="noveggies">No</label>
-        <input type="radio" name="Veggies" id="noveggies" value="0">
+        <input type="radio" name="Veggies" id="noveggies" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="HvyAlcoholConsump">Do you consume more than 10 alcoholic drinks weekly?</label></p>
         <label for="heavydrink">Yes</label>
-        <input type="radio" name="HvyAlcoholConsump" id="heavydrink" value="1">
+        <input type="radio" name="HvyAlcoholConsump" id="heavydrink" value="1" required>
         <label for="noheavydrink">No</label>
-        <input type="radio" name="HvyAlcoholConsump" id="noheavydrink" value="0">
+        <input type="radio" name="HvyAlcoholConsump" id="noheavydrink" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="genhlth">How would you rate your health?</label></p>
-        <select name="GenHlth" id="genhlth">
-            <option value="none" selected disabled hidden>Select an option</option>
+        <select name="GenHlth" id="genhlth" required>
+           <option value="" disabled hidden>Select an option</option>
             <option value="1">Excellent</option>
             <option value="2">Very Good</option>
             <option value="3">Good</option>
@@ -111,24 +111,24 @@
         </select>
     </div>
     <div class="field">
-        <p><label class="field-label" for="menthlth">No. of odays of poor mental health in past 30 days</label></p>
-        <input type="number" step="1" min="0" max="30" name="MentHlth" id="menthlth" placeholder="Enter number between 0-30">
+        <p><label class="field-label" for="menthlth">No. of days of poor mental health in past 30 days</label></p>
+        <input type="number" step="1" min="0" max="30" name="MentHlth" id="menthlth" placeholder="Enter number between 0-30" required>
     </div>
     <div class="field">
-        <p><label class="field-label" for="physhlth">No. of odays of poor physical health in past 30 days</label></p>
-        <input type="number" step="1" min="0" max="30" name="PhysHlth" id="physhlth" placeholder="Enter number between 0-30">
+        <p><label class="field-label" for="physhlth">No. of days of poor physical health in past 30 days</label></p>
+        <input type="number" step="1" min="0" max="30" name="PhysHlth" id="physhlth" placeholder="Enter number between 0-30" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="DiffWalk">Serious difficulty walking or climbing stairs?</label></p>
         <label for="diffwalk">Yes</label>
-        <input type="radio" name="DiffWalk" id="diffwalk" value="1">
+        <input type="radio" name="DiffWalk" id="diffwalk" value="1" required>
         <label for="nodiffwalk">No</label>
-        <input type="radio" name="DiffWalk" id="nodiffwalk" value="0">
+        <input type="radio" name="DiffWalk" id="nodiffwalk" value="0" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="education">Education Level</label></p>
-        <select name="Education" id="education">
-            <option value="none" selected disabled hidden>Select an option</option>
+        <select name="Education" id="education" required>
+            <option value="" disabled hidden>Select an option</option>
             <option value="1">Kindergarten/None</option>
             <option value="2">Elementary/Primary</option>
             <option value="3">Some High School</option>
@@ -139,8 +139,8 @@
     </div>
     <div class="field">
     <p><label class="field-label" for="income">Yearly Income Level</label></p>
-        <select name="Income" id="income">
-            <option value="none" selected disabled hidden>Select an option</option>
+        <select name="Income" id="income" required>
+           <option value="" disabled hidden>Select an option</option>
             <option value="1">Less than $10,000</option>
             <option value="5">Less than $15,000</option>
             <option value="8">Less than $20,000</option>
