--- a/frontend/templates/predictor.html
+++ b/frontend/templates/predictor.html
@@ -43,19 +43,19 @@
     </div>
     <div class="field">
         <p><label class="field-label" for="height">Height(m)</label></p>
-        <input type="number" step=".01" min="0.50" max="2.50" name="Height" id="height" required>
+        <input type="number" step=".01" min="0.50" max="2.50" name="Height" id="height" placeholder="e.g. 1.55" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="weight">Weight(kg)</label></p>
-        <input type="number" step=".1" min="30" max="200" name="Weight" id="weight" required>
+        <input type="number" step=".1" min="30" max="200" name="Weight" id="weight" placeholder="e.g. 68" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="sticks">Sticks/day of cigarettes</label></p>
-        <input type="number" step="1" min="0" name="SticksDay" id="sticks" required>
+        <input type="number" step="1" min="0" name="SticksDay" id="sticks" placeholder="e.g. 15" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="years">For how many years have you smoked?</label></p>
-        <input type="number" step="1" min="0" name="YearsSmoked" id="years" required>
+        <input type="number" step="1" min="0" name="YearsSmoked" id="years" placeholder="e.g. 32" required>
     </div>
     <div class="field">
         <p><label class="field-label" for="Stroke">Ever had a stroke?</label></p>
